--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyTenSevenDiale
 
 # Crypto stuff
 hash.algo=SHA-256
+cipher.algo=AES/CBC/PKCS5Padding
+key.algo=AES
+key.size.bits=128
