Encryption/decryption completed with one-time key by default for now

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ hash.algo=SHA-256
 cipher.algo=AES/CBC/PKCS5Padding
 key.algo=AES
 key.size.bits=128
+# Remember to set it to false once we start using persistent db
+use.one.time.key=true
