--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -3,3 +3,5 @@ hash.algo=SHA-256
 cipher.algo=AES/CBC/PKCS5Padding
 key.algo=AES
 key.size.bits=128
+# For unit tests it's always one-time key
+use.one.time.key=true
