--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 # TODO for now - config for in-memory derby db
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:derby:memory:myDB;create=true
+#spring.datasource.url=jdbc:derby:memory:myDB
+#spring.jpa.properties.hibernate.default_schema=SCH
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyTenSevenDialect
 
