Persistent db for heroku profile

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,3 +1,5 @@
+# By default, everything is in-memory and not persistent
+
 # TODO for now - config for in-memory derby db
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:derby:memory:myDB;create=true
