Reverting back heroku profile, using in-memory db and one time key

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,3 +1,6 @@
+# This was supposed to be heroku profile, but heroku does not have persistent storage 
+# so we'll be using everything in memory
+
 # Heroky-specofic profile:
 # - Persistent database
 # - Key from file
